<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/imgblack">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleBienvenido"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notaBt" />

    <Button
        android:id="@+id/btnAmbienteAprendizaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ampren" />

    <Button
        android:id="@+id/btnLeerConsultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asistencia_alumnos" />

    <Button
        android:id="@+id/btnAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agenda" />

</LinearLayout>
