<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/imgblack"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBienvenida"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btclass1"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="19sp"
        android:text="@string/btalumno" />

    <Button
        android:id="@+id/btclass2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="19sp"
        android:text="@string/btprofessor" />

    <Button
        android:id="@+id/btclass3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="19sp"
        android:text="@string/btapoderado" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="12sp"/>

</LinearLayout>
