<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/imgblack"
    tools:context=".NotaActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/tvNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notas"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Contenedor para las notas dinámicas -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:padding="8dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:id="@+id/llNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <!-- Botón para registrar una nueva nota -->
    <Button
        android:id="@+id/btnRegistrarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regNotas"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_marginBottom="8dp" />

    <!-- Botón para eliminar una nota -->
    <Button
        android:id="@+id/btnEliminarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminarNotas"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_light" />

    <!-- Botón para editar una nota -->
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editarbtn"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_marginTop="10dp" />
</LinearLayout>
